--- a/styles/index14.css
+++ b/styles/index14.css
@@ -7,39 +7,46 @@
 .item {
 
     background-color: bisque;
-
 }
 
 .item2 {
     background-color: darkgray;
 }
-.inner-item{
-    margin:0;
+
+.inner-item {
+    margin: 0;
 }
-@media screen and (min-width:600px){
-    .item{
+
+@media screen and (min-width: 600px) {
+    .item {
         float: left;
         width: 400px;
         height: 5em;
     }
+
     .item2 {
         margin-left: 400px;
     }
 }
-@media screen and (max-width:599px) {
-    li{
+
+@media screen and (max-width: 599px) {
+    li {
         list-style-type: none; /* Убираем маркеры */
     }
-    li:first-child{
-        float:left;
+
+    li:first-child {
+        float: left;
     }
-    li:nth-child(2)
-    {
-        float:left;
+
+    li:nth-child(2) {
+        float: left;
         margin: 0 5px;
     }
-    .item{margin: 20px 0;
-        height: auto;}
+
+    .item {
+        margin: 20px 0;
+        height: auto;
+    }
 }
 
 
